src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-self-is-anon.rs
struct Foo {
    field: i32,
}

impl Foo {
    fn foo<'a>(&self, x: &Foo) -> &Foo {
        if true { x } else { self }
        //~^ ERROR lifetime may not live long enough
    }
}

fn main() {}
